tests/snapshots/xml_extractor__golden_extrai_nfe_proc_da_fixture_55.snap
---
source: tests/xml_extractor.rs
assertion_line: 17
expression: proc
---
NFeProc {
    versao: "4.00",
    nfe: NFe {
        inf_nfe: InfNFe {
            id: Some(
                "NFe35260300000000000191550010000005041000000001",
            ),
            versao: Some(
                "4.00",
            ),
            ide: Ide {
                c_uf: Some(
                    "35",
                ),
                c_nf: Some(
                    "85265620",
                ),
                nat_op: Some(
                    "VENDA",
                ),
                mod_: Some(
                    "55",
                ),
                serie: Some(
                    "1",
                ),
                n_nf: Some(
                    "504",
                ),
                dh_emi: Some(
                    "2026-03-05T11:55:39-03:00",
                ),
                dh_sai_ent: Some(
                    "2026-03-05T11:55:39-03:00",
                ),
                tp_nf: Some(
                    "1",
                ),
                id_dest: Some(
                    "1",
                ),
                c_mun_fg: Some(
                    "3529906",
                ),
                tp_imp: Some(
                    "1",
                ),
                tp_emis: Some(
                    "1",
                ),
                c_dv: Some(
                    "1",
                ),
                tp_amb: Some(
                    "1",
                ),
                fin_nfe: Some(
                    "1",
                ),
                ind_final: Some(
                    "1",
                ),
                ind_pres: Some(
                    "1",
                ),
                proc_emi: Some(
                    "0",
                ),
                ver_proc: Some(
                    "1.0.0",
                ),
            },
            emit: Emit {
                cnpj: Some(
                    "00000000000191",
                ),
                x_nome: Some(
                    "EMPRESA FICTICIA LTDA",
                ),
                x_fant: Some(
                    "LOJA EXEMPLO",
                ),
                ender_emit: EnderEmit {
                    x_lgr: Some(
                        "RUA DAS FLORES",
                    ),
                    nro: Some(
                        "100",
                    ),
                    x_bairro: Some(
                        "CENTRO",
                    ),
                    c_mun: Some(
                        "3529906",
                    ),
                    x_mun: Some(
                        "Miracatu",
                    ),
                    uf: Some(
                        "SP",
                    ),
                    cep: Some(
                        "11850000",
                    ),
                    c_pais: Some(
                        "1058",
                    ),
                    x_pais: Some(
                        "Brasil",
                    ),
                    fone: None,
                },
                ie: Some(
                    "000000000000",
                ),
                crt: Some(
                    "3",
                ),
            },
            dest: Some(
                Dest {
                    cnpj: Some(
                        "11222333000181",
                    ),
                    cpf: None,
                    x_nome: Some(
                        "EMPRESA EXEMPLO DE EMPRESA",
                    ),
                    ender_dest: Some(
                        EnderDest {
                            x_lgr: Some(
                                "AV BRASIL",
                            ),
                            nro: Some(
                                "500",
                            ),
                            x_bairro: Some(
                                "JARDIM ESPERANCA",
                            ),
                            c_mun: Some(
                                "3529906",
                            ),
                            x_mun: Some(
                                "Miracatu",
                            ),
                            uf: Some(
                                "SP",
                            ),
                            cep: Some(
                                "11850000",
                            ),
                            c_pais: Some(
                                "1058",
                            ),
                            x_pais: Some(
                                "Brasil",
                            ),
                        },
                    ),
                    ind_ie_dest: Some(
                        "9",
                    ),
                    ie: None,
                },
            ),
            det: [
                Det {
                    n_item: Some(
                        "1",
                    ),
                    prod: Prod {
                        c_prod: Some(
                            "2",
                        ),
                        c_ean: Some(
                            "SEM GTIN",
                        ),
                        x_prod: Some(
                            "PRODUTO TESTE UNITARIO",
                        ),
                        ncm: Some(
                            "21069090",
                        ),
                        cfop: Some(
                            "5101",
                        ),
                        u_com: Some(
                            "UN",
                        ),
                        q_com: Some(
                            "20.000",
                        ),
                        v_un_com: Some(
                            "45.00",
                        ),
                        v_prod: Some(
                            "900.00",
                        ),
                        c_ean_trib: Some(
                            "SEM GTIN",
                        ),
                        u_trib: Some(
                            "UN",
                        ),
                        q_trib: Some(
                            "20.000",
                        ),
                        v_un_trib: Some(
                            "45.00",
                        ),
                        ind_tot: Some(
                            "1",
                        ),
                    },
                    imposto: Imposto {
                        v_tot_trib: Some(
                            "72.00",
                        ),
                        icms: Some(
                            ICMS {
                                icms00: Some(
                                    ICMS00 {
                                        orig: Some(
                                            "0",
                                        ),
                                        cst: Some(
                                            "00",
                                        ),
                                        mod_bc: Some(
                                            "3",
                                        ),
                                        v_bc: Some(
                                            "900.00",
                                        ),
                                        p_icms: Some(
                                            "8.0000",
                                        ),
                                        v_icms: Some(
                                            "72.00",
                                        ),
                                    },
                                ),
                                icms_sn102: None,
                                icms_sn400: None,
                                icms_sn500: None,
                                icms_sn900: None,
                            },
                        ),
                        pis: Some(
                            PIS {
                                pis_aliq: None,
                            },
                        ),
                        cofins: Some(
                            COFINS {
                                cofins_aliq: None,
                            },
                        ),
                    },
                },
            ],
            total: Total {
                icms_tot: Some(
                    ICMSTot {
                        v_bc: Some(
                            "900.00",
                        ),
                        v_icms: Some(
                            "72.00",
                        ),
                        v_icms_deson: Some(
                            "0.00",
                        ),
                        v_fcp_uf_dest: Some(
                            "0.00",
                        ),
                        v_icms_uf_dest: Some(
                            "0.00",
                        ),
                        v_icms_uf_remet: Some(
                            "0.00",
                        ),
                        v_fcp: Some(
                            "0.00",
                        ),
                        v_bc_st: Some(
                            "0.00",
                        ),
                        v_st: Some(
                            "0.00",
                        ),
                        v_fcp_st: Some(
                            "0.00",
                        ),
                        v_fcp_st_ret: Some(
                            "0.00",
                        ),
                        v_prod: Some(
                            "900.00",
                        ),
                        v_frete: Some(
                            "0.00",
                        ),
                        v_seg: Some(
                            "0.00",
                        ),
                        v_desc: Some(
                            "0.00",
                        ),
                        v_ii: Some(
                            "0.00",
                        ),
                        v_ipi: Some(
                            "0.00",
                        ),
                        v_ipi_devol: Some(
                            "0.00",
                        ),
                        v_pis: Some(
                            "0.00",
                        ),
                        v_cofins: Some(
                            "0.00",
                        ),
                        v_outro: Some(
                            "0.00",
                        ),
                        v_nf: Some(
                            "900.00",
                        ),
                        v_tot_trib: Some(
                            "72.00",
                        ),
                    },
                ),
                ibs_cbs_tot: Some(
                    IBSCBSTot {
                        v_bc_ibs_cbs: Some(
                            "828.00",
                        ),
                        g_ibs: Some(
                            GIBSTot {
                                g_ibs_uf: Some(
                                    GIBSUFTot {
                                        v_ibs_uf: Some(
                                            "0.83",
                                        ),
                                    },
                                ),
                                g_ibs_mun: Some(
                                    GIBSMunTot {
                                        v_ibs_mun: Some(
                                            "0.00",
                                        ),
                                    },
                                ),
                                v_ibs: Some(
                                    "0.83",
                                ),
                            },
                        ),
                        g_cbs: Some(
                            GCBSTot {
                                v_cbs: Some(
                                    "7.45",
                                ),
                            },
                        ),
                    },
                ),
                is_tot: None,
            },
            transp: Transp {
                mod_frete: Some(
                    "9",
                ),
            },
            pag: Pag {
                det_pag: [
                    DetPag {
                        ind_pag: Some(
                            "0",
                        ),
                        t_pag: Some(
                            "01",
                        ),
                        v_pag: Some(
                            "900.00",
                        ),
                    },
                ],
                v_troco: None,
            },
            inf_adic: InfAdic {
                inf_ad_fisco: None,
                inf_cpl: Some(
                    "INFORMACOES COMPLEMENTARES DE TESTE",
                ),
            },
        },
        inf_nfe_supl: None,
    },
    prot_nfe: ProtNFe {
        inf_prot: Some(
            InfProt {
                tp_amb: Some(
                    "1",
                ),
                ver_aplic: Some(
                    "SP_NFE_PL009_V4",
                ),
                ch_nfe: Some(
                    "35260300000000000191550010000005041000000001",
                ),
                dh_recbto: Some(
                    "2026-03-05T11:55:41-03:00",
                ),
                n_prot: Some(
                    "000000000000000",
                ),
                dig_val: Some(
                    "AAAAAAAAAAAAAAAAAAAAAAAAAAAA",
                ),
                c_stat: Some(
                    "100",
                ),
                x_motivo: Some(
                    "Autorizado o uso da NF-e",
                ),
            },
        ),
    },
}
